--- a/src/Components/Propos/Cardprod.css
+++ b/src/Components/Propos/Cardprod.css
@@ -1,45 +1,3 @@
-.Bblack{
-    background: rgb(37, 37, 37);
-    width: 100%;
-    height: 45px;
-}
-.P1{
-    margin: 5px;
-    padding: 3Px;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    font-family: monospace;
-}
-.P2{
-    font-size: 13px;
-    color: rgb(177, 169, 169);
-    margin: 5px;
-    padding: 8px;
-}
-.Bwhite{
-    height:70px;
-}
-.PI{
-    color: red;
-    padding: 18px;
-}
-.card {
-    border-radius: 20px;
-}
-.imgs{
-    border-top-left-radius: 20px ;
-    border-top-right-radius: 20px;
-}
-.petiimg{
-    width: 50px;
-    height: 50px;
-    background-image: url('../Assets/6poin.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 10px;
-    padding: 10px;
-    
-    border-radius: 50%;
+.mab{
+    padding: 10%;
 }
